# laboratory

./: readme.md
TISD/: keys.txt
lab_01/: a.out  build_debug.sh  build_release.sh  errcodes.c  main.c  readme.md  st_big_num_math.c  st_big_num_math.h
lab_01_CA/: 0.778259.txt  1.txt  data.txt  data_reverse_d.txt  data_reverse_short.txt  delta_reverse.txt  delta_xy.txt  gotxy.txt  input.cpp  input.h  interp.cpp  interp.h  lab_01_CA.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  reverse_d.py  sub.py  swapXY.py  yandex.cpp
lab_01_CG/: func_triangle.cpp  func_triangle.h  lab_01_CG.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h
lab_01_oop/: actions.cpp  actions.h  drawFigure.cpp  edge.h  edges.cpp  edges.h  error.h  figure.cpp  handler.cpp  handler.h  lab_01_oop.pro  line.cpp  line.h  logic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myformat.txt  point.cpp  point.h  points.h
lab_02 (2)/: build_debug.sh  car_key_t.c  car_t.h  car_t_arr_sort.c  car_t_arr_sort.h  car_t_array.c  car_t_array.h  errcodes.c  list.txt  main.c
lab_02CA/: CMakeCache.txt  CMakeLists.txt  Makefile  MyApp  cmake_install.cmake  input.h  interpolate3d.cpp  interpolate3d.h  main.cpp  spline.cpp  spline.h
lab_02_CA/: input.cpp  interp.cpp  interp.h  interpolate3d.cpp  interpolate3d.h  lab_02_CA.pro  main.cpp  spline.cpp  spline.h
lab_02_CG/: actions.cpp  actions.h  error.h  figure.cpp  figure.h  input.cpp  input.h  lab_02_CG.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_03_CA/: 3dshow.py  chart.cpp  chart.h  data_1d  data_1d_1  data_2_1D  data_2d  test  (+10 more)
(+731 files in other folders)
